# mohollm

./: .gitignore  LICENSE  README.md  benchmark_initialization.py  main.py  pyproject.toml
experiments/: benchmark_main.py  benchmark_main_synthetic.py  benchmarks.py  run_ablations_car_side_impact.py  run_ablations_parallel.sh  run_ablations_penicillin.py  run_ablations_prompt_penicillin.py  run_ablations_prompt_penicillin_vanilla.py  run_ablations_vehicle_safety.py  run_fcnet_ablation.sh  run_fcnet_parallel.sh  run_nb201.py  run_nb201_vanilla.py  run_real_world.sh  run_synthetic_baselines.sh  synetune_utils.py  synetune_utils_fcnet_ablation.py
mohollm/: __init__.py  builder.py  settings.py
plot/: BETA_ABLATION_README.md  _plot_template_file.py  aggregate_focus.py  aggregate_icl_divergence.py  compare_models_utility.py  normalize_data_nb201.py  plot_bar_compare.py  plot_base.py  plot_beta_ablation_poloni.py  plot_common.py  plot_cost.py  plot_critical_difference_diagram.py  plot_critical_difference_diagram_fvals.py  plot_focus.py  plot_fvals.py  plot_fvals_over_time_subplots.py  plot_fvals_paper.py  plot_hv_log_diff_over_time.py  plot_hv_over_time.py  plot_hv_over_time_subplots.py  plot_hv_over_time_subplots_real.py  plot_icl_adaptability.py  plot_icl_divergence.py  plot_log_hv_diff_over_time_subplots.py  plot_pareto_set.py  plot_pareto_set_empirical_attainment.py  plot_pareto_set_empirical_attainment_subplots.py  plot_settings.py  plot_surrogate_accuracy.py  plot_time_per_trial.py  plot_token_usage.py  plot_utility.py  validate_results.py
scripts/: remaining_runs.sh  (+7 more)
(+295 files in other folders)
